--- a/css/style.css
+++ b/css/style.css
@@ -347,3 +347,31 @@ label.error {
     max-width: 20px;
     max-height: 20px;
 }
+
+
+.select2-container--default .select2-selection--single {
+    background-color: #fff;
+    border-radius: 4px;
+    border: 1px solid #ced4da !important;
+    height: 30px;
+}
+
+.select2-container .select2-selection--single {
+    height: 2.6rem !important;
+}
+
+.select2-container .select2-selection--single .select2-selection__rendered {
+    padding: 6px 20px 0 15px !important;
+}
+
+.select2-container--default .select2-selection--single .select2-selection__arrow {
+    height: 26px !important;
+    top: 8px !important;
+    right: 8px !important;
+    width: 20px !important;
+}
+
+.select2-container--default.select2-container--open .select2-selection--single .select2-selection__arrow b , 
+.select2-container--default .select2-selection--single .select2-selection__arrow b {
+    border-width: 6px 5px 0 5px;
+}
