--- a/css/style.css
+++ b/css/style.css
@@ -138,8 +138,8 @@ input:focus, select:focus{
     color: #a29c9c;
     margin-bottom: 1rem;
 }
-.card-system__form-api__btn-dis,
-.card-system__form-api__btn-random{
+.btn-activeKey,
+.btn-random{
     border: 0.05rem solid #f5f5f5;
     background-color: #fff;
     border-radius: .5rem;
@@ -150,10 +150,14 @@ img.btn-random__icon {
     display: block;
     width: 1rem;
 }
-.card-system__form-phones{
+.phones {
     display: flex;
     flex-direction: column;
 }
+/* .key {
+    display: flex;
+    flex-direction: row;
+} */
 label{
     font-weight: 500;
     font-size: .894rem;
